Update MachineInfo.java